--- a/config.conf
+++ b/config.conf
@@ -1,21 +1,21 @@
 [info]
 #开始在一起的日期，格式参考 2022-06-24
-start_date=2022-06-24
+start_date=2021-08-23
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=威海
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=青岛
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=10-25
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=03-24
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb53482e106
-app_secret=c4149ff57031fdfd8694c1b09fbe3731
+app_id=wxe934a4ef1cae1cb0
+app_secret=0b664fd86f33e11f653459e35c5a811c
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphCc851rpCwxYKyj_dxklcYlRc
+template_id=oebRERfnnoHAf11ZQDB214QeavmlAdnatoL4jP_cpEA
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3X15uZhYrFLIlBFaCuvXYnu0jo,oB3X15rsbjFsv5Oqs8o5OO-p1UOI,oB3X15jYQUorA55dyht5mtw4pZQ8
+user_id=oJrIm6IjbIaO_dBDTN95Yt8DUIVA
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
